# Teddy

./: .gitignore  CODEOWNERS  Cargo.toml  README.md
.github/: dependabot.yml
.github/workflows/: ci.yml
src/: conf.rs  guards.rs  handlers.rs  main.rs  middleware.rs
src/handlers/: download.rs  execute.rs  mod.rs  ping.rs  upload.rs  welcome.rs
