[package]
name = "teddy"
version = "2.1.0"
authors = ["jdcoffre <jeandenis.coffre@sonarsource.com>",
            "drautureau <david.rautureau@sonarsource.com>",
            "hgomez <henri.gomez@sonarsource.com",
            "francois.teychene@gmail.com"]
edition = "2021"

[dependencies]
actix-web = "4.8"
actix-files = "0.6"
actix-multipart = "0.6"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
failure = "0.1"
log = "0.4"
simple_logger = "5.0"
futures = "0.3"
base64 = "0.22"
