[package]
name = "teddy"
version = "2.1.0"
authors = ["jdcoffre <jeandenis.coffre@sonarsource.com>",
            "drautureau <david.rautureau@sonarsource.com>",
            "hgomez <henri.gomez@sonarsource.com",
            "francois.teychene@gmail.com"]
edition = "2021"

[dependencies]
actix-files = "0.6"
actix-multipart = "0.6"
actix-web = "4.8"
actix-web-metrics = "0.2.0"
base64 = "0.22"
bytes = "1.6.0"
failure = "0.1"
futures = "0.3"
log = "0.4"
memchr = "2.7.5"
metrics-exporter-prometheus = "0.17.2"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
simple_logger = "5.0"
