[package]
name = "teddy"
version = "2.1.2"
authors = ["Jean-Denis Coffre",
            "David Rautureau",
            "Henri Gomez",
            "Francois Teychene",
	    "Stephane Trebel"]
edition = "2021"

[dependencies]
actix-files = "0.6.10"
actix-multipart = "0.7.2"
actix-web = "4.8"
actix-web-metrics = "0.4.0"
base64 = "0.22"
bytes = "1.11.1"
thiserror = "2.0.18"
futures = "0.3"
log = "0.4"
memchr = "2.7.5"
metrics-exporter-prometheus = "0.18.1"
mime = "0.3.17"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.118"
simple_logger = "5.0"
